<resources>
    <string name="app_name">Theater</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="producers">Постановщики</string>
    <string name="tickets">Билеты</string>
    <string name="Ok">Ок</string>
    <string name="author">Автор спектакля</string>
    <string name="premiereDate">Дата премьеры</string>
    <string name="cancel">Отмена</string>
    <string name="buy_ticket">  Купить билет  </string>
    <string name="spInfo">Информация о постановке</string>
    <string name="selected_item">Selected item:</string>
    <string name="actors">Актеры</string>
    <string name="authors">Авторы</string>
    <string name="validation_error_text">Поле не может быть пустым</string>
    <string name="date_validation_error_text">Формат даты не соответствует шаблону: yyyy-[m]m-[d]d</string>
    <string name="date_order_error_text">Неверный логический порядок дат</string>
    <string name="playbill">Афиша</string>
    <string name="title_activity_performance">PerformanceActivity</string>
</resources>
